[project]
name = "diploma"
version = "0.1.0"
description = ""
authors = [
    {name = "DenisTernovoy",email = "96496534+DenisTernovoy@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0,<7.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "drf-yasg (>=1.21.11,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
black = "^25.12.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
mypy = "^1.19.1"
